# felix-exam

./: README.md  felix.db  pyproject.toml  requirements.txt
src/: config.py  database.py  main.py
src/public/: __init__.py  api.py
src/public/material/: crud.py  models.py  views.py
src/public/product/: crud.py  models.py  views.py
src/public/unit/: crud.py  models.py  views.py
src/public/warehouse/: crud.py  models.py  views.py
src/utils/: generic_models.py
